@@ -1,5 +1,6 @@
 from plone.app.layout.viewlets import ViewletBase
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
+from Products.CMFCore.utils import getToolByName
 
 
 class NewsByline(ViewletBase):
@@ -8,3 +9,11 @@ class NewsByline(ViewletBase):
 
     def render(self):
         return self.template()
+
+    def creator(self):
+        userid = self.context.Creator()
+        mt = getToolByName(self.context, 'portal_membership')
+        member = mt.getMemberById(userid)
+        if member:
+            return member.getProperty('fullname') or userid
+        return userid
