@@ -4,7 +4,8 @@ Changelog
 1.0.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixed byline viewlet. Added creator and modification date.
+  [Julian Infanger]
 
 
 1.0.4 (2012-05-09)
